--- a/src/app/home/pages/generate/generate.page.scss
+++ b/src/app/home/pages/generate/generate.page.scss
@@ -5,10 +5,10 @@
 }
 
 .btn-container {
-    flex-direction: column;
-    align-items: center;
+    display: flex;
     justify-content: center;
-    margin: 0 auto;
+    align-items: center;
+    margin: 24px auto 18px;
     padding: 0 1em;
 }
 
@@ -28,6 +28,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+ion-button {
+    text-align: center;
+    width: auto;
 }
 
 ion-text {
