--- a/src/app/home/pages/generate/generate.page.scss
+++ b/src/app/home/pages/generate/generate.page.scss
@@ -30,6 +30,10 @@
     object-fit: cover;
 }
 
+.error {
+    color: var(--ion-color-danger);
+}
+
 ion-button {
     text-align: center;
     width: auto;
@@ -41,4 +45,24 @@ ion-text {
     font-style: normal;
     padding: 1.2em 0.3em;
     text-align: center;
+}
+
+@media only screen and (min-width: 500px) {
+    .image {
+        width: 100%;
+        height: 80%;
+        object-fit: contain;
+    }
+
+    .picker {
+        width: 30rem;
+        max-width: 80%;
+        height: 20rem;
+        max-height: 30vh;
+        border: 5px solid var(--ion-color-secondary);
+        margin: 1rem auto 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
