added generate video method

--- a/src/app/home/pages/gallery/gallery.page.html
+++ b/src/app/home/pages/gallery/gallery.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>gallery</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">gallery</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <app-sub-header></app-sub-header>
+
+  <div class="title-container">
+    <ion-text color="primary">GALLERY</ion-text>
+  </div>  
 </ion-content>
