--- a/src/app/home/pages/generate/generate.page.scss
+++ b/src/app/home/pages/generate/generate.page.scss
@@ -22,12 +22,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .error {
@@ -60,21 +63,20 @@ ion-spinner {
 }
 
 @media only screen and (min-width: 500px) {
-    .image {
-        width: 100%;
-        height: 80%;
-        object-fit: contain;
-    }
-
     .picker {
         width: 30rem;
         max-width: 80%;
         height: 20rem;
-        max-height: 30vh;
+        max-height: 40vh;
         border: 5px solid var(--ion-color-secondary);
-        margin: 1rem auto 4rem;
+        margin: 0.7rem auto 1.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
+    }
+
+    .btn-container {
+        margin: 12px auto;
     }
 }
