--- a/src/app/home/pages/account/account.page.scss
+++ b/src/app/home/pages/account/account.page.scss
@@ -13,15 +13,29 @@
     margin: 0.3em 1.7em;
 }
 
+.btn-container {
+    display: flex;
+    justify-content: center;
+}
+
 .profile-img {
     display: flex;
-    align-items: end;
-    margin-right: 14px;
+    justify-content: center;
+    align-items: flex-end;
+
+    ion-avatar {
+        width: 64px;
+        height: 64px;
+        min-width: 64px;
+        min-height: 64px;
+        flex-shrink: 0;
+    }
 }
 
 .verification-text {
     font-family: 'Courier New', Courier, monospace !important;
     font-size: 14px;
+    font-weight: bold;
     margin-left: 1em;
 }
 
