--- a/src/app/home/pages/account/account.page.scss
+++ b/src/app/home/pages/account/account.page.scss
@@ -13,6 +13,17 @@
     margin: 0.3em 1.7em;
 }
 
+.link-container {
+    display: flex;
+    flex-direction: column;
+    margin: 2em 0;
+}
+
+.link-container ion-button ion-label {
+    font-family: 'Joti One', sans-serif !important;
+    font-size: 1rem;
+}
+
 .btn-container {
     display: flex;
     justify-content: center;
